# Changelog
# https://dev.mysql.com/doc/relnotes/connector-j/8.0/en/

Version 8.0.19

Version 8.0.18

  - WL#13347, Connectors should handle expired password sandbox without SET operations.

  - Fix for Bug#84098 (25223123), endless loop in LoadBalancedAutoCommitInterceptor.

  - Fix for Bug#23721537, MULTI-SELECT WITH EXECUTEASYNC() GIVES IMPROPER ERROR.

  - Fix for Bug#95741 (29898567), METADATA QUERY USES UPPER() AROUND NUMERIC EXPRESSION.

  - Fix for Bug#20913289, PSTMT.EXECUTEUPDATE() FAILS WHEN SQL MODE IS NO_BACKSLASH_ESCAPES.

  - Fix for Bug#80441 (22850444), SYNTAX ERROR ON RESULTSET.UPDATEROW() WITH SQL_MODE NO_BACKSLASH_ESCAPES.

Version 8.0.17

  - WL#13210, Generate Javadocs via ant.A

  - WL#12247, DevAPI: indexing array fields.

  - WL#12726, DevAPI: Add overlaps and not_overlaps as operator.

  - Fix for Bug#95503 (29821029), Operator IN not mapping consistently to the right X Plugin operation.

  - WL#12942, Update README.md and add new CONTRIBUTING.md.

  - WL#13125, Support fully qualified hostnames longer than 60 characters.

  - Fix for Bug#95210 (29807741), ClassCastException in BlobFromLocator when connecting as jdbc:mysql:replication.

  - Fix for Bug#29591275, THE JAR FILE NEEDS TO CONTAIN A README AND LICENSE FILE.

  - WL#13124, Support new utf8mb4 bin collation.

  - WL#13009, DevAPI: Deprecate methods.

  - WL#11101, Remove de-cache and close of SSPSs on double call to close().

  - Fix for Bug#89133 (27356869)  CONTRIBUTION: UPDATE DATABASEMETADATA.JAVA.
    Thanks to Harald Aamot for his contribution.

  - Fix for Bug#11891000, DABATASEMETADATA.GETTABLES() IGNORES THE SCHEMA_PATTERN ARGUMENT.

  - Fix for Bug#94101 (29277648), SETTING LOGSLOWQUERIES SHOULD NOT AUTOMATICALLY ENABLE PROFILESQL FOR QUERIES.
    Thanks to Florian Agsteiner for the contribution.

  - Fix for Bug#74690 (20010454), PROFILEREVENT HOSTNAME HAS NO GETTER().

  - Fix for Bug#70677 (17640628), CONNECTOR J WITH PROFILESQL - LOG CONTAINS LOTS OF STACKTRACE DATA.